...
    }

    HorizontalPager(
        state = pagerState,
        key = { page -> images[page].logicalUrl },
        userScrollEnabled = !currentPageZoomed,
        modifier = modifier.testTag("single_image_pager"),
    ) { page ->
        val item = images[page]
        SingleImageViewer(
            item = item,
            imageLoader = imageLoader,
            requestGeneration =
...
