...
                model = request,
                imageLoader = imageLoader,
                contentDescription = name,
                contentScale = ContentScale.Fit,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("media_image")
                    .pointerInput(Unit) {
                        detectTransformGestures {
                                _,
                                pan,
                                gestureZoom,
                                _,
...
